# pytcl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
integrations/: Dockerfile  conftest.py  test_tcl.py
pytcl/: builtins.py  commands.py  errors.py  files.py  interpreter.py  iterators.py  types.py  words.py
tests/pytcl/: test_commands.py  test_interpreter.py  test_words.py
